refactor: 운영자 API 전체 제거
